--- a/speakers/index.html
+++ b/speakers/index.html
@@ -141,8 +141,25 @@
       </figure>
     </a>
   </li>
+  
+  <li>
+    <a class="speaker-card css-" href="./Prasad-Khose/index.html">
+      <div class="speaker-card__info">
+        
+        <h3 class="h4">Prasad Khose</h3>
+        <p class="m-0">Founder @Crayomi Edu</p>
+      </div>
 
+      <figure class="speaker-image">
+        
+        <span>
+          <img src="https://res.cloudinary.com/dhex06aa8/image/upload/v1668006552/Skillship%20Summit/Speakers/Prasad%20Khose.jpg" alt="Erica Brescia">
+        </span>
+      </figure>
+    </a>
+  </li>
   <li class="spacer"> </li>
+
 </ul>
 <script>localStorage.setItem('satelliteSchedFilter', '');</script>
 
