--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
       <div class="col-12 col-lg-6 ml-3">
         <div class="video-wrap">
           <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/0z8x_iZ-k8E" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
-          <img src="./assets/img/thumbnail.jpeg" alt="">
+          <img src="./assets/img/thumbnail1.jpeg" alt="">
         </div>
       </div>
     </div>
