--- a/about-us/index.html
+++ b/about-us/index.html
@@ -69,6 +69,9 @@
 				<a href="../workshops/index.html">Workshops</a>
 			</li>
       <li>
+        <a href="../sponsors/index.html">Sponsors</a>
+      </li>
+      <li>
 				<a href="#">About Us</a>
 			</li>
       <li>
@@ -95,6 +98,9 @@
 					<li>
 						<a href="../workshops/index.html">Workshops</a>
 					</li>
+          <li>
+            <a href="../sponsors/index.html">Sponsors</a>
+          </li>
           <li>
             <a href="#">About Us</a>
           </li>
