--- a/code-of-conduct/index.html
+++ b/code-of-conduct/index.html
@@ -67,6 +67,9 @@
         <a href="../workshops/index.html">Workshops</a>
       </li>
       <li>
+        <a href="../sponsors/index.html">Sponsors</a>
+      </li>
+      <li>
         <a href="../about-us/index.html">About Us</a>
       </li>
       <li>
@@ -93,6 +96,9 @@
 					<li>
 						<a href="../workshops/index.html">Workshops</a>
 					</li>
+          <li>
+            <a href="../sponsors/index.html">Sponsors</a>
+          </li>
           <li>
             <a href="../about-us/index.html">About Us</a>
           </li>
