--- a/faq/index.html
+++ b/faq/index.html
@@ -67,6 +67,9 @@
 				<a href="../workshops/index.html">Workshops</a>
 			</li>
       <li>
+        <a href="../sponsors/index.html">Sponsors</a>
+      </li>
+      <li>
 				<a href="../about-us/index.html">About Us</a>
 			</li>
       <li>
@@ -92,6 +95,9 @@
           </li>
           <li>
             <a href="../workshops/index.html">Workshops</a>
+          </li>
+          <li>
+            <a href="../sponsors/index.html">Sponsors</a>
           </li>
           <li>
             <a href="../about-us/index.html">About Us</a>
