--- a/speakers/index.html
+++ b/speakers/index.html
@@ -69,6 +69,9 @@
         <a href="../workshops/index.html">Workshops</a>
 			</li>
       <li>
+        <a href="../sponsors/index.html">Sponsors</a>
+      </li>
+      <li>
         <a href="../about-us/index.html">About Us</a>
       </li>
       <li>
@@ -97,7 +100,9 @@
 					<li>
 						<a href="../workshops/index.html">Workshops</a>
 					</li>
-					
+          <li>
+            <a href="../sponsors/index.html">Sponsors</a>
+          </li>
           <li>
             <a href="../about-us/index.html">About Us</a>
           </li>
