--- a/workshops/index.html
+++ b/workshops/index.html
@@ -71,6 +71,9 @@
 				<a href="../workshops/index.html">Workshops</a>
 			</li>
       <li>
+        <a href="../sponsors/index.html">Sponsors</a>
+      </li>
+      <li>
 				<a href="../about-us/index.html">About Us</a>
 			</li>
         <li>
@@ -98,6 +101,9 @@
 			<li>
 				<a href="../workshops/index.html">Workshops</a>
 			</li>
+      <li>
+        <a href="../sponsors/index.html">Sponsors</a>
+      </li>
       <li>
 				<a href="../about-us/index.html">About Us</a>
 			</li>
