--- a/speakers/index.html
+++ b/speakers/index.html
@@ -163,6 +163,22 @@
       </figure>
     </a>
   </li>
+  <li>
+    <a class="speaker-card css-" href="./Pranav-M/index.html">
+      <div class="speaker-card__info">
+        
+        <h3 class="h4">Pranav M</h3>
+        <p class="m-0">SDE || @Microsoft</p>
+      </div>
+
+      <figure class="speaker-image">
+        
+        <span>
+          <img src="https://res.cloudinary.com/dhex06aa8/image/upload/v1668267591/Skillship%20Summit/Speakers/Pranav%20M.jpg" alt="Erica Brescia">
+        </span>
+      </figure>
+    </a>
+  </li>
   <li class="spacer"> </li>
 
 </ul>
