--- a/workshops/index.html
+++ b/workshops/index.html
@@ -67,6 +67,9 @@
 			<li>
 				<a href="../speakers/index.html">Speakers</a>
 			</li>
+      <!-- <li>
+        <a href="../schadule/index.html">Schadule</a>
+      </li> -->
 			<li>
 				<a href="../workshops/index.html">Workshops</a>
 			</li>
@@ -98,6 +101,9 @@
 			<li>
 				<a href="../speakers/index.html">Speakers</a>
 			</li>
+      <li>
+        <a href="../schadule/index.html">Schadule</a>
+      </li>
 			<li>
 				<a href="../workshops/index.html">Workshops</a>
 			</li>
