--- a/speakers/Pranav-M/index.html
+++ b/speakers/Pranav-M/index.html
@@ -56,7 +56,7 @@
 	<div class="site-header__inner">
 		<div class="site-branding">
 			<a href="../../index.html">
-				<img src="../../assets/img/Satellite-2021-logo.svg" alt="GitHub Satellite Logo" />
+				<img src="../../assets/img/logo.png" alt="GitHub Satellite Logo" />
 			</a>
 		</div>
 
@@ -67,7 +67,9 @@
       <li>
         <a href="../../workshops/index.html">Workshops</a>
       </li>
-      
+      <li>
+        <a href="../../sponsors/index.html">Sponsors</a>
+      </li>
       <li>
         <a href="../../about-us/index.html">About Us</a>
       </li>
@@ -95,7 +97,9 @@
           <li>
             <a href="../../workshops/index.html">Workshops</a>
           </li>
-          
+          <li>
+            <a href="../../sponsors/index.html">Sponsors</a>
+          </li>
           <li>
             <a href="../../about-us/index.html">About Us</a>
           </li>
