--- a/speakers/index.html
+++ b/speakers/index.html
@@ -179,6 +179,22 @@
       </figure>
     </a>
   </li>
+  <li>
+    <a class="speaker-card css-" href="./M-K-Kaushik/index.html">
+      <div class="speaker-card__info">
+        
+        <h3 class="h4">Dr. M.K Kaushik</h3>
+        <p class="m-0">Director - Innovation & Entrepreneurship (VEDIC)</p>
+      </div>
+
+      <figure class="speaker-image">
+        
+        <span>
+          <img src="https://media-exp1.licdn.com/dms/image/C5603AQHfJ5C3iJH9VQ/profile-displayphoto-shrink_200_200/0/1634603325372?e=1673481600&v=beta&t=p9IOE6ccPGROeShC_wWB3NkXjz-K5uoQbt4Si278r-E" alt="Erica Brescia">
+        </span>
+      </figure>
+    </a>
+  </li>
   <li class="spacer"> </li>
 
 </ul>
