--- a/speakers/index.html
+++ b/speakers/index.html
@@ -190,7 +190,7 @@
       <figure class="speaker-image">
         
         <span>
-          <img src="https://media-exp1.licdn.com/dms/image/C5603AQHfJ5C3iJH9VQ/profile-displayphoto-shrink_200_200/0/1634603325372?e=1673481600&v=beta&t=p9IOE6ccPGROeShC_wWB3NkXjz-K5uoQbt4Si278r-E" alt="Erica Brescia">
+          <img src="https://res.cloudinary.com/dhex06aa8/image/upload/v1668272525/Skillship%20Summit/Speakers/Dr.%20M.K%20Kaushik.jpg" alt="Erica Brescia">
         </span>
       </figure>
     </a>
