--- a/code-of-conduct/index.html
+++ b/code-of-conduct/index.html
@@ -64,6 +64,9 @@
         <a href="../speakers/index.html">Speakers</a>
       </li>
       <li>
+        <a href="../schadule/index.html">Schadule</a>
+      </li>
+      <li>
         <a href="../workshops/index.html">Workshops</a>
       </li>
       <li>
@@ -93,6 +96,9 @@
           <li>
 						<a href="../speakers/index.html">Speakers</a>
 					</li>
+          <li>
+            <a href="../schadule/index.html">Schadule</a>
+          </li>
 					<li>
 						<a href="../workshops/index.html">Workshops</a>
 					</li>
