--- a/faq/index.html
+++ b/faq/index.html
@@ -63,6 +63,9 @@
 			<li>
 				<a href="../speakers/index.html">Speakers</a>
 			</li>
+      <li>
+        <a href="../schadule/index.html">Schadule</a>
+      </li>
 			<li>
 				<a href="../workshops/index.html">Workshops</a>
 			</li>
@@ -92,6 +95,9 @@
 				<ul class="mobile-navigation">
           <li>
             <a href="../speakers/index.html">Speakers</a>
+          </li>
+          <li>
+            <a href="../schadule/index.html">Schadule</a>
           </li>
           <li>
             <a href="../workshops/index.html">Workshops</a>
