--- a/speakers/Harsh-Shah/index.html
+++ b/speakers/Harsh-Shah/index.html
@@ -65,6 +65,9 @@
         <a href="../index.html">Speakers</a>
       </li>
       <li>
+        <a href="../../schadule/index.html">Schadule</a>
+      </li>
+      <li>
         <a href="../../workshops/index.html">Workshops</a>
       </li>
       <li>
@@ -94,9 +97,9 @@
           <li>
             <a href="../index.html">Speakers</a>
           </li>
-          <!-- <li>
+          <li>
             <a href="../../schadule/index.html">Schadule</a>
-          </li> -->
+          </li>
           <li>
             <a href="../../workshops/index.html">Workshops</a>
           </li>
