--- a/speakers/Prasad-Khose/index.html
+++ b/speakers/Prasad-Khose/index.html
@@ -65,6 +65,9 @@
         <a href="../index.html">Speakers</a>
       </li>
       <li>
+        <a href="../../schadule/index.html">Schadule</a>
+      </li>
+      <li>
         <a href="../../workshops/index.html">Workshops</a>
       </li>
       <li>
@@ -93,6 +96,9 @@
 				<ul class="mobile-navigation">
           <li>
             <a href="../index.html">Speakers</a>
+          </li>
+          <li>
+            <a href="../../schadule/index.html">Schadule</a>
           </li>
           <li>
             <a href="../../workshops/index.html">Workshops</a>
