--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -65,6 +65,9 @@
 			<li>
 				<a href="../speakers/index.html">Speakers</a>
 			</li>
+      <li>
+        <a href="../schadule/index.html">Schadule</a>
+      </li>
 			<li>
         <a href="../workshops/index.html">Workshops</a>
 			</li>
@@ -97,6 +100,9 @@
 					<li>
 						<a href="../speakers/index.html">Speakers</a>
 					</li>
+          <li>
+            <a href="../schadule/index.html">Schadule</a>
+          </li>
 					<li>
 						<a href="../workshops/index.html">Workshops</a>
 					</li>
