--- a/faq/index.html
+++ b/faq/index.html
@@ -64,7 +64,7 @@
 				<a href="../speakers/index.html">Speakers</a>
 			</li>
       <li>
-        <a href="../schadule/index.html">Schadule</a>
+        <a href="../Schedule/index.html">Schedule</a>
       </li>
 			<li>
 				<a href="../workshops/index.html">Workshops</a>
@@ -97,7 +97,7 @@
             <a href="../speakers/index.html">Speakers</a>
           </li>
           <li>
-            <a href="../schadule/index.html">Schadule</a>
+            <a href="../Schedule/index.html">Schedule</a>
           </li>
           <li>
             <a href="../workshops/index.html">Workshops</a>
