--- a/workshops/index.html
+++ b/workshops/index.html
@@ -68,7 +68,7 @@
 				<a href="../speakers/index.html">Speakers</a>
 			</li>
       <!-- <li>
-        <a href="../schadule/index.html">Schadule</a>
+        <a href="../Schedule/index.html">Schedule</a>
       </li> -->
 			<li>
 				<a href="../workshops/index.html">Workshops</a>
@@ -102,7 +102,7 @@
 				<a href="../speakers/index.html">Speakers</a>
 			</li>
       <li>
-        <a href="../schadule/index.html">Schadule</a>
+        <a href="../Schedule/index.html">Schedule</a>
       </li>
 			<li>
 				<a href="../workshops/index.html">Workshops</a>
