--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 				<a href="speakers/index.html">Speakers</a>
 			</li>
       <li>
-        <a href="./schadule/index.html">Schadule</a>
+        <a href="./Schedule/index.html">Schedule</a>
       </li>
 			<li>
 				<a href="workshops/index.html">Workshops</a>
@@ -101,7 +101,7 @@
 						<a href="speakers/index.html">Speakers</a>
 					</li>
           <li>
-            <a href="./schadule/index.html">Schadule</a>
+            <a href="./Schedule/index.html">Schedule</a>
           </li>
 					<li>
 						<a href="workshops/index.html">Workshops</a>
