--- a/schedule/index.html
+++ b/schedule/index.html
@@ -71,7 +71,7 @@
           <a href="../speakers/index.html">Speakers</a>
         </li>
         <li>
-          <a href="../Schedule/index.html">Schedule</a>
+          <a href="../schedule/index.html">Schedule</a>
         </li>
         <li>
           <a href="../workshops/index.html">Workshops</a>
@@ -109,7 +109,7 @@
               <a href="../speakers/index.html">Speakers</a>
             </li>
             <li>
-              <a href="../Schedule/index.html">Schedule</a>
+              <a href="../schedule/index.html">Schedule</a>
             </li>
             <li>
               <a href="../workshops/index.html">Workshops</a>
