--- a/code-of-conduct/index.html
+++ b/code-of-conduct/index.html
@@ -64,7 +64,7 @@
         <a href="../speakers/index.html">Speakers</a>
       </li>
       <li>
-        <a href="../Schedule/index.html">Schedule</a>
+        <a href="../schedule/index.html">Schedule</a>
       </li>
       <li>
         <a href="../workshops/index.html">Workshops</a>
@@ -97,7 +97,7 @@
 						<a href="../speakers/index.html">Speakers</a>
 					</li>
           <li>
-            <a href="../Schedule/index.html">Schedule</a>
+            <a href="../schedule/index.html">Schedule</a>
           </li>
 					<li>
 						<a href="../workshops/index.html">Workshops</a>
