--- a/speakers/Pranav-M/index.html
+++ b/speakers/Pranav-M/index.html
@@ -65,7 +65,7 @@
         <a href="../index.html">Speakers</a>
       </li>
       <li>
-        <a href="../../Schedule/index.html">Schedule</a>
+        <a href="../../schedule/index.html">Schedule</a>
       </li>
       <li>
         <a href="../../workshops/index.html">Workshops</a>
@@ -98,7 +98,7 @@
             <a href="../index.html">Speakers</a>
           </li>
           <li>
-            <a href="../../Schedule/index.html">Schedule</a>
+            <a href="../../schedule/index.html">Schedule</a>
           </li>
           <li>
             <a href="../../workshops/index.html">Workshops</a>
