--- a/workshops/index.html
+++ b/workshops/index.html
@@ -67,9 +67,9 @@
 			<li>
 				<a href="../speakers/index.html">Speakers</a>
 			</li>
-      <!-- <li>
-        <a href="../Schedule/index.html">Schedule</a>
-      </li> -->
+      <li>
+        <a href="../schedule/index.html">Schedule</a>
+      </li>
 			<li>
 				<a href="../workshops/index.html">Workshops</a>
 			</li>
@@ -102,7 +102,7 @@
 				<a href="../speakers/index.html">Speakers</a>
 			</li>
       <li>
-        <a href="../Schedule/index.html">Schedule</a>
+        <a href="../schedule/index.html">Schedule</a>
       </li>
 			<li>
 				<a href="../workshops/index.html">Workshops</a>
