--- a/about-us/index.html
+++ b/about-us/index.html
@@ -42,7 +42,7 @@
 <meta property="twitter:title" content="Skillship Summit" />
 <meta name="twitter:site" content="@github" />
 <script type="application/ld+json">
-{"@context":"https://schema.org","@type":"WebPage","description":"Thanks for joining us for two days dedicated to celebrating India’s developer community! Missed the live action? Enjoy everything Satellite India has to offer anytime, anywhere.","headline":"Code of Conduct","image":"https://githubsatellite.com/assets/img/social-card.png","publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"https://githubsatellite.com/assets/img/Satellite-2021-logo.svg"}},"url":"https://githubsatellite.com/code-of-conduct/"}</script>
+{"@context":"https://schema.org","@type":"WebPage","description":"Thanks for joining us for two days dedicated to celebrating India’s developer community! Missed the live action? Enjoy everything Satellite India has to offer anytime, anywhere.","headline":"Privacy Policy","image":"https://githubsatellite.com/assets/img/social-card.png","publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"https://githubsatellite.com/assets/img/Satellite-2021-logo.svg"}},"url":"https://githubsatellite.com/code-of-conduct/"}</script>
 <!-- End Jekyll SEO tag -->
 
 </head>
@@ -194,7 +194,7 @@
           <a href="../faq/index.html" data-analytics-click="Footer, click, cta_text: faq">FAQ</a>
         </li>
         <li>
-          <a href="../code-of-conduct/index.html" data-analytics-click="Footer, click, cta_text: code of conduct">Code of Conduct</a>
+          <a href="../privacy-policy/index.html" data-analytics-click="Footer, click, cta_text: Privacy Policy">Privacy Policy</a>
         </li>
       
         <li>
