--- a/workshops/index.html
+++ b/workshops/index.html
@@ -323,8 +323,7 @@
             <a href="../faq/index.html" data-analytics-click="Footer, click, cta_text: faq">FAQ</a>
           </li>
           <li>
-            <a href="../code-of-conduct/index.html" data-analytics-click="Footer, click, cta_text: code of conduct">Code
-              of Conduct</a>
+            <a href="../privacy-policy/index.html" data-analytics-click="Footer, click, cta_text: Privacy Policy">Privacy Policy</a>
           </li>
          
           <li>
