--- a/schedule/index.html
+++ b/schedule/index.html
@@ -83,7 +83,7 @@
           <a href="../about-us/index.html">About Us</a>
         </li>
         <li>
-          <a href="https://bit.ly/skfsummit" data-modal="subscribe">
+          <a href="https://bit.ly/skfsummit" >
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
               <path d="m10.998 16 5-4-5-4v3h-9v2h9z"></path>
               <path
@@ -122,7 +122,7 @@
             </li>
 
             <li>
-              <a href="https://bit.ly/skfsummit" data-modal="subscribe">
+              <a href="https://bit.ly/skfsummit" >
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                   <path d="m10.998 16 5-4-5-4v3h-9v2h9z"></path>
                   <path
@@ -1019,10 +1019,10 @@ Metaverse</h3>
 
       </div>
 
-      <div class="modal__close" data-modal="subscribe"><img src="../assets/img/svgs/close.svg" alt="close icon" /></div>
+      <div class="modal__close" ><img src="../assets/img/svgs/close.svg" alt="close icon" /></div>
     </div>
 
-    <div class="screen" data-modal="subscribe"></div>
+    <div class="screen" ></div>
   </div>
 
   <div class="modal-wrap" id="add-to-calendar">
