--- a/workshops/index.html
+++ b/workshops/index.html
@@ -80,7 +80,7 @@
 				<a href="../about-us/index.html">About Us</a>
 			</li>
         <li>
-          <a href="https://bit.ly/skfsummit" data-modal="subscribe">
+          <a href="https://bit.ly/skfsummit" >
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="m10.998 16 5-4-5-4v3h-9v2h9z"></path><path d="M12.999 2.999a8.938 8.938 0 0 0-6.364 2.637L8.049 7.05c1.322-1.322 3.08-2.051 4.95-2.051s3.628.729 4.95 2.051S20 10.13 20 12s-.729 3.628-2.051 4.95-3.08 2.051-4.95 2.051-3.628-.729-4.95-2.051l-1.414 1.414c1.699 1.7 3.959 2.637 6.364 2.637s4.665-.937 6.364-2.637C21.063 16.665 22 14.405 22 12s-.937-4.665-2.637-6.364a8.938 8.938 0 0 0-6.364-2.637z"></path></svg>
             <span>Register</span>
           </a>
@@ -115,7 +115,7 @@
 			</li>
            
             <li>
-              <a href="https://bit.ly/skfsummit" data-modal="subscribe">
+              <a href="https://bit.ly/skfsummit" >
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="m10.998 16 5-4-5-4v3h-9v2h9z"></path><path d="M12.999 2.999a8.938 8.938 0 0 0-6.364 2.637L8.049 7.05c1.322-1.322 3.08-2.051 4.95-2.051s3.628.729 4.95 2.051S20 10.13 20 12s-.729 3.628-2.051 4.95-3.08 2.051-4.95 2.051-3.628-.729-4.95-2.051l-1.414 1.414c1.699 1.7 3.959 2.637 6.364 2.637s4.665-.937 6.364-2.637C21.063 16.665 22 14.405 22 12s-.937-4.665-2.637-6.364a8.938 8.938 0 0 0-6.364-2.637z"></path></svg>
                 <span>Register</span>
               </a>
@@ -388,10 +388,10 @@
 
       </div>
 
-      <div class="modal__close" data-modal="subscribe"><img src="../assets/img/svgs/close.svg" alt="close icon" /></div>
+      <div class="modal__close" ><img src="../assets/img/svgs/close.svg" alt="close icon" /></div>
     </div>
 
-    <div class="screen" data-modal="subscribe"></div>
+    <div class="screen" ></div>
   </div>
 
   <div class="modal-wrap" id="add-to-calendar">
