--- a/speakers/index.html
+++ b/speakers/index.html
@@ -272,7 +272,7 @@
     </a>
   </li>
   <li>
-    <a class="speaker-card css-" href="./Saurabh Trivedi/">
+    <a class="speaker-card css-" href="#sp">
       <div class="speaker-card__info">
         
         <h3 class="h4">Sriram Kesavan</h3>
