--- a/faq/index.html
+++ b/faq/index.html
@@ -125,7 +125,7 @@
     <div class="container container--md my-6 py-6" data-detect-viewport>
   <div data-animate-in="up">
     <h1 class="h1">Frequently asked questions</h1>
-    <p class="f3 text-white">You have questions, and we have answers. If you can’t find what you’re looking for, <a href="mailto:events@github.com">send us a note</a>.</p>
+    <p class="f3 text-white">You have questions, and we have answers. If you can’t find what you’re looking for, <a href="mailto:support@skillshipfoundation.com">send us a note</a>.</p>
   </div>
 </div>
 
