--- a/speakers/index.html
+++ b/speakers/index.html
@@ -288,6 +288,23 @@
       </figure>
     </a>
   </li>
+  <li>
+    <a class="speaker-card css-" href="./Manoj-Soni/">
+      <div class="speaker-card__info">
+        
+        <h3 class="h4">Manoj Soni</h3>
+        <p class="m-0">
+          Founder & Director @Sony Computer Education, Chhindwara(MP)</p>
+      </div>
+
+      <figure class="speaker-image">
+        
+        <span>
+          <img src="https://res.cloudinary.com/dhex06aa8/image/upload/v1668937000/Skillship%20Summit/Speakers/Manoj%20Soni.jpg" alt="Erica Brescia">
+        </span>
+      </figure>
+    </a>
+  </li>
   <li class="spacer"> </li>
 
 </ul>
