--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
       <li>
         <a href="./schedule/index.html">Schedule</a>
       </li>
+      <li>
+        <a href="../hackathon/index.html">Hackathon & Ideathon</a>
+      </li>
 			<li>
 				<a href="workshops/index.html">Workshops</a>
 			</li>
@@ -102,7 +105,11 @@
 						<a href="speakers/index.html">Speakers</a>
 					</li>
           <li>
-            <a href="./schedule/index.html">Schedule</a>
+            <a h
+            ref="./schedule/index.html">Schedule</a>
+          </li>
+          <li>
+            <a href="../hackathon/index.html">Hackathon & Ideathon</a>
           </li>
 					<li>
 						<a href="workshops/index.html">Workshops</a>
