--- a/speakers/Prasad-Khose/index.html
+++ b/speakers/Prasad-Khose/index.html
@@ -68,8 +68,12 @@
         <a href="../../schedule/index.html">Schedule</a>
       </li>
       <li>
+        <a href="../../hackathon/index.html">Hackathon & Ideathon</a>
+      </li>
+      <li>
         <a href="../../workshops/index.html">Workshops</a>
       </li>
+      
       <li>
         <a href="../../sponsors/index.html">Sponsors</a>
       </li>
@@ -99,6 +103,9 @@
           </li>
           <li>
             <a href="../../schedule/index.html">Schedule</a>
+          </li>
+          <li>
+            <a href="../../hackathon/index.html">Hackathon & Ideathon</a>
           </li>
           <li>
             <a href="../../workshops/index.html">Workshops</a>
