--- a/about-us/index.html
+++ b/about-us/index.html
@@ -68,6 +68,9 @@
       <li>
         <a href="../schedule/index.html">Schedule</a>
       </li>
+      <li>
+        <a href="../hackathon/index.html">Hackathon & Ideathon</a>
+      </li>
 			<li>
 				<a href="../workshops/index.html">Workshops</a>
 			</li>
@@ -100,6 +103,9 @@
 					</li>
           <li>
             <a href="../schedule/index.html">Schedule</a>
+          </li>
+          <li>
+            <a href="../hackathon/index.html">Hackathon & Ideathon</a>
           </li>
 					<li>
 						<a href="../workshops/index.html">Workshops</a>
