--- a/faq/index.html
+++ b/faq/index.html
@@ -66,6 +66,9 @@
       <li>
         <a href="../schedule/index.html">Schedule</a>
       </li>
+      <li>
+        <a href="../hackathon/index.html">Hackathon & Ideathon</a>
+      </li>
 			<li>
 				<a href="../workshops/index.html">Workshops</a>
 			</li>
@@ -98,6 +101,9 @@
           </li>
           <li>
             <a href="../schedule/index.html">Schedule</a>
+          </li>
+          <li>
+            <a href="../hackathon/index.html">Hackathon & Ideathon</a>
           </li>
           <li>
             <a href="../workshops/index.html">Workshops</a>
