--- a/schedule/index.html
+++ b/schedule/index.html
@@ -74,6 +74,9 @@
           <a href="../schedule/index.html">Schedule</a>
         </li>
         <li>
+          <a href="../hackathon/index.html">Hackathon & Ideathon</a>
+        </li>
+        <li>
           <a href="../workshops/index.html">Workshops</a>
         </li>
         <li>
@@ -112,6 +115,9 @@
               <a href="../schedule/index.html">Schedule</a>
             </li>
             <li>
+              <li>
+                <a href="../hackathon/index.html">Hackathon & Ideathon</a>
+              </li>
               <a href="../workshops/index.html">Workshops</a>
             </li>
             <li>
@@ -178,7 +184,7 @@
                 <div class="session">
                  
                     <p class="h5 font-weight-500 text-gradient d-inline-block mb-2 pt-2 ">Registration</p>
-                    <h3 class="session__title">Onspot Registration and Networking activity</h3>
+                    <h3 class="session__title"> Registration On and Networking activity</h3>
                   
 
                   <div class="session__meta">
@@ -963,7 +969,7 @@ Metaverse</h3>
               data-analytics-click="Footer, click, cta_text: Jobs at GitHub">Skillship Foundation</a>
           </li>
           <li>
-            <a href="mailtosupport@skillshipfoundation.com"
+            <a href="mailto:support@skillshipfoundation.com"
               data-analytics-click="Footer, click, cta_text: email events team">support@skillshipfoundation.com</a>
           </li>
         </ul>
