--- a/speakers/Manoj-Soni/index.html
+++ b/speakers/Manoj-Soni/index.html
@@ -68,6 +68,9 @@
         <a href="../../schedule/index.html">Schedule</a>
       </li>
       <li>
+        <a href="../../hackathon/index.html">Hackathon & Ideathon</a>
+      </li>
+      <li>
         <a href="../../workshops/index.html">Workshops</a>
       </li>
       <li>
@@ -99,6 +102,9 @@
           </li>
           <li>
             <a href="../../schedule/index.html">Schedule</a>
+          </li>
+          <li>
+            <a href="../../hackathon/index.html">Hackathon & Ideathon</a>
           </li>
           <li>
             <a href="../../workshops/index.html">Workshops</a>
