--- a/speakers/index.html
+++ b/speakers/index.html
@@ -68,6 +68,9 @@
       <li>
         <a href="../schedule">Schedule</a>
       </li>
+      <li>
+        <a href="../hackathon/index.html">Hackathon & Ideathon</a>
+      </li>
 			<li>
         <a href="../workshops">Workshops</a>
 			</li>
@@ -102,6 +105,9 @@
 					</li>
           <li>
             <a href="../schedule">Schedule</a>
+          </li>
+          <li>
+            <a href="../hackathon/index.html">Hackathon & Ideathon</a>
           </li>
 					<li>
 						<a href="../workshops">Workshops</a>
