--- a/schedule/index.html
+++ b/schedule/index.html
@@ -184,7 +184,7 @@
                 <div class="session">
                  
                     <p class="h5 font-weight-500 text-gradient d-inline-block mb-2 pt-2 ">Registration</p>
-                    <h3 class="session__title"> Registration On and Networking activity</h3>
+                    <h3 class="session__title"> <a href="https://bit.ly/skfsummit"> Register Here</a></h3>
                   
 
                   <div class="session__meta">
