--- a/about-us/index.html
+++ b/about-us/index.html
@@ -202,7 +202,9 @@
         <li>
           <a href="../privacy-policy/index.html" data-analytics-click="Footer, click, cta_text: Privacy Policy">Privacy Policy</a>
         </li>
-      
+        <li>
+          <a href="index.html" data-analytics-click="Footer, click, cta_text: terms">Terms & Conditions</a>
+        </li>
         <li>
           <a href="https://skillshipfoundation.com/" target="_blank" rel="noopener noreferrer" data-analytics-click="Footer, click, cta_text: Jobs at GitHub">Skillship Foundation</a>
         </li>
