--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -267,7 +267,9 @@
         <li>
           <a href="#" data-analytics-click="Footer, click, cta_text: Privacy Policy">Privacy Policy</a>
         </li>
-      
+        <li>
+          <a href="index.html" data-analytics-click="Footer, click, cta_text: terms">Terms & Conditions</a>
+        </li>
         <li>
           <a href="https://skillshipfoundation.com/" target="_blank" rel="noopener noreferrer" data-analytics-click="Footer, click, cta_text: Jobs at GitHub">Skillship Foundation</a>
         </li>
