--- a/schedule/index.html
+++ b/schedule/index.html
@@ -963,7 +963,9 @@ Metaverse</h3>
           <li>
             <a href="../privacy-policy/index.html" data-analytics-click="Footer, click, cta_text: Privacy Policy">Privacy Policy</a>
           </li>
-         
+          <li>
+            <a href="index.html" data-analytics-click="Footer, click, cta_text: terms">Terms & Conditions</a>
+          </li>
           <li>
             <a href="skillshipfoundation.com" target="_blank" rel="noopener noreferrer"
               data-analytics-click="Footer, click, cta_text: Jobs at GitHub">Skillship Foundation</a>
