--- a/speakers/Vivek-Nanoti/index.html
+++ b/speakers/Vivek-Nanoti/index.html
@@ -246,7 +246,9 @@ Scotland, England ,Portugal, Germany, France, Belgium, Israel,Netherlands, Malay
         <li>
           <a href="../../privacy-policy/index.html" data-analytics-click="Footer, click, cta_text: Privacy Policy">Privacy Policy</a>
         </li>
-      
+        <li>
+          <a href="index.html" data-analytics-click="Footer, click, cta_text: terms">Terms & Conditions</a>
+        </li>
         <li>
           <a href="https://skillshipfoundation.com/" target="_blank" rel="noopener noreferrer" data-analytics-click="Footer, click, cta_text: Jobs at GitHub">Skillship Foundation</a>
         </li>
