--- a/index.html
+++ b/index.html
@@ -846,7 +846,10 @@
           <a href="./privacy-policy/index.html" data-analytics-click="Footer, click, cta_text: Privacy Policy">Privacy Policy</a>
         </li>
         <li>
-          <a href="index.html" data-analytics-click="Footer, click, cta_text: terms">Terms & Conditions</a>
+          <a href="./terms/index.html" data-analytics-click="Footer, click, cta_text: terms">Terms & Conditions</a>
+        </li>
+        <li>
+          <a href="contact-us/index.html" data-analytics-click="Footer, click, cta_text: terms">Contact Us</a>
         </li>
         <li>
           <a href="https://skillshipfoundation.com/" target="_blank" rel="noopener noreferrer" data-analytics-click="Footer, click, cta_text: Jobs at GitHub">Skillship Foundation</a>
