--- a/terms/index.html
+++ b/terms/index.html
@@ -201,7 +201,10 @@
           <a href="../code-of-conduct/index.html" data-analytics-click="Footer, click, cta_text: code of conduct">Code of Conduct</a>
         </li>
         <li>
-          <a href="index.html" data-analytics-click="Footer, click, cta_text: terms">Terms & Conditions</a>
+          <a href="#" data-analytics-click="Footer, click, cta_text: terms">Terms & Conditions</a>
+        </li>
+        <li>
+          <a href="../contact-us/index.html" data-analytics-click="Footer, click, cta_text: terms">Contact Us</a>
         </li>
         <li>
           <a href="https://help.github.com/en/articles/github-privacy-statement" target="_blank" rel="noopener noreferrer" data-analytics-click="Footer, click, cta_text: privacy">Privacy</a>
