--- a/terms/index.html
+++ b/terms/index.html
@@ -210,7 +210,7 @@
           <a href="https://help.github.com/en/articles/github-privacy-statement" target="_blank" rel="noopener noreferrer" data-analytics-click="Footer, click, cta_text: privacy">Privacy</a>
         </li>
         <li>
-          <a href="https://grnh.se/10e8bf661us" target="_blank" rel="noopener noreferrer" data-analytics-click="Footer, click, cta_text: Jobs at GitHub">Jobs at GitHub</a>
+          <a href="https://skillshipfoundation.com" target="_blank" rel="noopener noreferrer" data-analytics-click="Footer, click, cta_text: Jobs at GitHub">Skillship Foundation</a>
         </li>
         <li>
           <a href="mailto:events@github.com" data-analytics-click="Footer, click, cta_text: email events team">events@github.com</a>
