--- a/terms/index.html
+++ b/terms/index.html
@@ -56,7 +56,7 @@
 	<div class="site-header__inner">
 		<div class="site-branding">
 			<a href="../index.html">
-				<img src="../assets/img/logo.png alt="GitHub Satellite Logo" />
+				<img src="../assets/img/logo.png" alt="GitHub Satellite Logo" />
 			</a>
 		</div>
 
