--- a/hackathon/index.html
+++ b/hackathon/index.html
@@ -149,8 +149,7 @@
     <div class="container my-4 py-3 my-lg-6 py-lg-6" data-detect-viewport>
       <div data-animate-in="up">
         <h1 class="h1">Hackathon</h1>
-        <p class="f3 text-white container--thin">Don’t miss a minute of Skillship Summit! Come back here after the event
-          for on&#8209;demand videos of every session.</p>
+        <p class="f3 text-white container--thin">An open platform which is open for a 24-hour hackathon where there is no limit for ideation. Everyone is invited to be a part of it.</p>
 
         <p class="p-sm text-dark mt-3">Times are displayed based on your location and are subject to change.</p>
       </div>
@@ -172,7 +171,13 @@
 
       <div class="schedule-bd">
         <div class="js-tab-bd" data-tab-bd="day-1">
-         <h1>Coming Soon</h1>
+         <h3>Ideathon </h3><br>
+         <p>Ideathon is a platform where you give your brain some tasks and work on an idea.
+          This event is exclusively open for first-year students to get an awareness of how an idea gets generated.</p><br>
+          <h3>Hackathon</h3><br>
+          <p>Followed by, we will be having Hackathon that is open to everyone.
+            In this hackathon, every team will be working on a problem statement based on the judges' topic.
+             There will be the first round of evaluation where the teams who couldn't perform well will be eliminated.</p>
         </div>
 
         <div class="js-tab-bd is-active" data-tab-bd="day-2">
