--- a/index.html
+++ b/index.html
@@ -72,6 +72,9 @@
       <li>
         <a href="../hackathon/index.html">Hackathon & Ideathon</a>
       </li>
+      <li>
+        <a href="./speed-hiring/index.html">Speed Hiring</a>
+      </li>
 			<li>
 				<a href="workshops/index.html">Workshops</a>
 			</li>
