--- a/speed-hiring/index.html
+++ b/speed-hiring/index.html
@@ -70,6 +70,9 @@
       <li>
         <a href="../hackathon/index.html">Hackathon & Ideathon</a>
       </li>
+      <li>
+        <a href="#">Speed Hiring</a>
+      </li>
 			<li>
         <a href="../workshops/index.html">Workshops</a>
 			</li>
@@ -107,6 +110,10 @@
           <li>
             <a href="../hackathon/index.html">Hackathon & Ideathon</a>
           </li>
+          <li>
+            <a href="#">Speed Hiring</a>
+          </li>
+
 					<li>
 						<a href="../workshops/index.html">Workshops</a>
 					</li>
