--- a/workshops/index.html
+++ b/workshops/index.html
@@ -73,6 +73,9 @@
       <li>
         <a href="../hackathon/index.html">Hackathon & Ideathon</a>
       </li>
+      <li>
+        <a href="../speed-hiring/index.html">Speed Hiring</a>
+      </li>
 			<li>
 				<a href="../workshops/index.html">Workshops</a>
 			</li>
@@ -109,6 +112,9 @@
       </li>
       <li>
         <a href="../hackathon/index.html">Hackathon & Ideathon</a>
+      </li>
+      <li>
+        <a href="../speed-hiring/index.html">Speed Hiring</a>
       </li>
 			<li>
 				<a href="../workshops/index.html">Workshops</a>
