--- a/contact-us/index.html
+++ b/contact-us/index.html
@@ -73,6 +73,9 @@
       <li>
         <a href="../hackathon/index.html">Hackathon & Ideathon</a>
       </li>
+      <li>
+        <a href="../speed-hiring/index.html">Speed Hiring</a>
+      </li>
 			<li>
 				<a href="../workshops/index.html">Workshops</a>
 			</li>
@@ -108,6 +111,9 @@
           </li>
           <li>
             <a href="../hackathon/index.html">Hackathon & Ideathon</a>
+          </li>
+          <li>
+            <a href="../speed-hiring/index.html">Speed Hiring</a>
           </li>
 					<li>
 						<a href="../workshops/index.html">Workshops</a>
