--- a/faq/index.html
+++ b/faq/index.html
@@ -69,6 +69,9 @@
       <li>
         <a href="../hackathon/index.html">Hackathon & Ideathon</a>
       </li>
+      <li>
+        <a href="../speed-hiring/index.html">Speed Hiring</a>
+      </li>
 			<li>
 				<a href="../workshops/index.html">Workshops</a>
 			</li>
@@ -104,6 +107,9 @@
           </li>
           <li>
             <a href="../hackathon/index.html">Hackathon & Ideathon</a>
+          </li>
+          <li>
+            <a href="../speed-hiring/index.html">Speed Hiring</a>
           </li>
           <li>
             <a href="../workshops/index.html">Workshops</a>
