--- a/schedule/index.html
+++ b/schedule/index.html
@@ -77,6 +77,9 @@
           <a href="../hackathon/index.html">Hackathon & Ideathon</a>
         </li>
         <li>
+          <a href="../speed-hiring/index.html">Speed Hiring</a>
+        </li>
+        <li>
           <a href="../workshops/index.html">Workshops</a>
         </li>
         <li>
@@ -117,6 +120,9 @@
             <li>
               <li>
                 <a href="../hackathon/index.html">Hackathon & Ideathon</a>
+              </li>
+              <li>
+                <a href="../speed-hiring/index.html">Speed Hiring</a>
               </li>
               <a href="../workshops/index.html">Workshops</a>
             </li>
