--- a/speakers/Rinku-Sharma/index.html
+++ b/speakers/Rinku-Sharma/index.html
@@ -71,6 +71,9 @@
         <a href="../../hackathon/index.html">Hackathon & Ideathon</a>
       </li>
       <li>
+        <a href="../../speed-hiring/index.html">Speed Hiring</a>
+      </li>
+      <li>
         <a href="../../workshops/index.html">Workshops</a>
       </li>
       <li>
@@ -105,6 +108,9 @@
           </li>
           <li>
             <a href="../../hackathon/index.html">Hackathon & Ideathon</a>
+          </li>
+          <li>
+            <a href="../../speed-hiring/index.html">Speed Hiring</a>
           </li>
           <li>
             <a href="../../workshops/index.html">Workshops</a>
@@ -244,6 +250,7 @@
         <li>
           <a href="../../privacy-policy/index.html" data-analytics-click="Footer, click, cta_text: Privacy Policy">Privacy Policy</a>
         </li>
+        
         <li>
           <a href="../../terms/index.html" data-analytics-click="Footer, click, cta_text: terms">Terms & Conditions</a>
         </li>
