--- a/speakers/Sriram-Kesavan/index.html
+++ b/speakers/Sriram-Kesavan/index.html
@@ -71,6 +71,10 @@
         <a href="../../hackathon/index.html">Hackathon & Ideathon</a>
       </li>
       <li>
+        <a href="../../speed-hiring/index.html">Speed Hiring</a>
+      </li>
+
+      <li>
         <a href="../../workshops/index.html">Workshops</a>
       </li>
       <li>
@@ -105,6 +109,9 @@
           </li>
           <li>
             <a href="../../hackathon/index.html">Hackathon & Ideathon</a>
+          </li>
+          <li>
+            <a href="../../speed-hiring/index.html">Speed Hiring</a>
           </li>
           <li>
             <a href="../../workshops/index.html">Workshops</a>
