--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -70,6 +70,9 @@
       <li>
         <a href="../hackathon/index.html">Hackathon & Ideathon</a>
       </li>
+      <li>
+        <a href="../speed-hiring/index.html">Speed Hiring</a>
+      </li>
 			<li>
         <a href="../workshops/index.html">Workshops</a>
 			</li>
@@ -106,6 +109,9 @@
           </li>
           <li>
             <a href="../hackathon/index.html">Hackathon & Ideathon</a>
+          </li>
+          <li>
+            <a href="../speed-hiring/index.html">Speed Hiring</a>
           </li>
 					<li>
 						<a href="../workshops/index.html">Workshops</a>
