--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -64,16 +64,14 @@
         <a href="../speakers/index.html">Speakers</a>
       </li>
       <li>
-        <a href="../schedule/index.html">Schedule</a>
-      </li>
-      <li>
-        <a href="../hackathon/index.html">Hackathon & Ideathon</a>
-      </li>
-      <li>
-        <a href="../speed-hiring/index.html">Speed Hiring</a>
-      </li>
-      <li>
-        <a href="../workshops/index.html">Workshops</a>
+        <div class="dropdown">
+          <a href="../schedule/">Schadule</a>
+          <div class="dropdown-content">
+            <a href="../hackathon/">Hackthon & Ideathon</a>
+            <a href="../speed-hiring/">Speed Hiring</a>
+            <a href="../workshops/">Workshops</a>
+          </div>
+        </div>
       </li>
       <li>
         <a href="../sponsors/index.html">Sponsors</a>
