--- a/speakers/index.html
+++ b/speakers/index.html
@@ -66,17 +66,15 @@
 				<a href="index.html">Speakers</a>
 			</li>
       <li>
-        <a href="../schedule">Schedule</a>
+        <div class="dropdown">
+          <a href="../schedule/">Schadule</a>
+          <div class="dropdown-content">
+            <a href="../hackathon/">Hackthon & Ideathon</a>
+            <a href="../speed-hiring/">Speed Hiring</a>
+            <a href="../workshops/">Workshops</a>
+          </div>
+        </div>
       </li>
-      <li>
-        <a href="../hackathon/index.html">Hackathon & Ideathon</a>
-      </li>
-      <li>
-        <a href="../speed-hiring/index.html">Speed Hiring</a>
-      </li>
-			<li>
-        <a href="../workshops">Workshops</a>
-			</li>
       <li>
         <a href="../sponsors">Sponsors</a>
       </li>
