--- a/speed-hiring/index.html
+++ b/speed-hiring/index.html
@@ -65,17 +65,15 @@
 				<a href="../speakers/index.html">Speakers</a>
 			</li>
       <li>
-        <a href="../schedule/index.html">Schedule</a>
+        <div class="dropdown">
+          <a href="../schedule/">Schadule</a>
+          <div class="dropdown-content">
+            <a href="../hackathon/">Hackthon & Ideathon</a>
+            <a href="../speed-hiring/">Speed Hiring</a>
+            <a href="../workshops/">Workshops</a>
+          </div>
+        </div>
       </li>
-      <li>
-        <a href="../hackathon/index.html">Hackathon & Ideathon</a>
-      </li>
-      <li>
-        <a href="#">Speed Hiring</a>
-      </li>
-			<li>
-        <a href="../workshops/index.html">Workshops</a>
-			</li>
       
       <li>
         <a href="index.html">Sponsors</a>
