--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -44,7 +44,55 @@
 <script type="application/ld+json">
 {"@context":"https://schema.org","@type":"WebPage","description":"Thanks for joining us for two days dedicated to celebrating India’s developer community! Missed the live action? Enjoy everything Satellite India has to offer anytime, anywhere.","headline":"Privacy Policy","image":"https://githubsatellite.com/assets/img/social-card.png","publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"https://githubsatellite.com/assets/img/Satellite-2021-logo.svg"}},"url":"https://githubsatellite.com/code-of-conduct/"}</script>
 <!-- End Jekyll SEO tag -->
-
+<style>
+  /* Style The Dropdown Button */
+.dropbtn {
+    background-color: #4CAF50;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+  }
+  
+  /* The container <div> - needed to position the dropdown content */
+  .dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  
+  /* Dropdown Content (Hidden by Default) */
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #000;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  /* Links inside the dropdown */
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  /* Change color of dropdown links on hover */
+  .dropdown-content a:hover {background-color: 
+#b08800}
+  
+  /* Show the dropdown menu on hover */
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
+  
+  /* Change the background color of the dropdown button when the dropdown content is shown */
+  .dropdown:hover .dropbtn {
+    background-color: #3e8e41;
+  }
+</style>
 </head>
 
 <body class="page-loading no-js page-code-of-conduct template-interior-page" id="page-code-of-conduct">
