--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 					</li>
           <li>
             <a h
-            ref="./schedule/index.html">Schedule</a>
+            ref="/schedule">Schedule</a>
           </li>
           <li>
             <a href="../hackathon/index.html">Hackathon & Ideathon</a>
