--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 			</li>
       <li>
         <div class="dropdown">
-          <a href="./schedule/">Schadule</a>
+          <a href="./schedule">Schadule</a>
           <div class="dropdown-content">
             <a href="./hackathon/">Hackthon & Ideathon</a>
             <a href="./speed-hiring/">Speed Hiring</a>
@@ -155,7 +155,7 @@
 					</li>
           <li>
             <a h
-            ref="/schedule">Schedule</a>
+            ref="./schedule/">Schedule</a>
           </li>
           <li>
             <a href="../hackathon/index.html">Hackathon & Ideathon</a>
