--- a/index.html
+++ b/index.html
@@ -154,8 +154,7 @@
 						<a href="speakers/index.html">Speakers</a>
 					</li>
           <li>
-            <a h
-            ref="./schedule/">Schedule</a>
+            <a href="./schedule/">Schedule</a>
           </li>
           <li>
             <a href="../hackathon/index.html">Hackathon & Ideathon</a>
