--- a/index.html
+++ b/index.html
@@ -711,7 +711,7 @@
  
   </div>
 </section>
-<section class="container-full my-6 pt-lg-4">
+<section class="container-full my-6 pt-lg-4 past-feedback">
   <center> 
   <header class="mb-4">
     <div class="container--thin mb-4 mb-lg-0">
