--- a/index.html
+++ b/index.html
@@ -93,6 +93,12 @@
   .dropdown:hover .dropbtn {
     background-color: #3e8e41;
   }
+  @media (min-width:300px ){
+    
+    .past-feedback{
+        display: none;
+    }
+}
 </style>
 </head>
 
