--- a/schedule/index.html
+++ b/schedule/index.html
@@ -485,7 +485,7 @@
               <div class="timeslot__sessions">
                 <div class="session">
                   
-                    <p class="h5 font-weight-500 text-gradient d-inline-block mb-2 pt-2 ">Workshops</p>
+                    <p class="h5 font-weight-500 text-gradient d-inline-block mb-2 pt-2 ">Hackathon</p>
                     <h3 class="session__title"> First Round Of Mentoring
                     </h3>
                 </div>
